Fixed layout issue caused by setting container height as 100vh

--- a/style.css
+++ b/style.css
@@ -4,22 +4,26 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-footer {
-    display: flex;
-    justify-content: space-around;
-    padding: 30px;
-    font-size: 1rem;
-}
-
 #container {
     max-width: 1920px;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    padding: 30px;
+    padding: 30px 0 0 0;
     background-image: linear-gradient(to bottom, #00d2ff, #3a7bd5)
+}
+
+footer {
+    display: flex;
+    margin-top: auto;
+    padding: 30px;
+    color: white;
+}
+
+footer div {
+    margin: 0 100px
 }
 
 #weapons button {
